// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Command component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md"
    data-slot="command"
    data-testid="cmdk-command"
  >
    <div>
      Test content
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandDialog component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    data-testid="dialog-root"
  >
    <div
      class="sr-only"
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Command Palette
      </h2>
      <p
        data-testid="dialog-description"
      >
        Search for a command to run...
      </p>
    </div>
    <div
      class="overflow-hidden p-0"
      data-show-close-button="true"
      data-testid="dialog-content"
    >
      <div
        class="bg-popover text-popover-foreground flex h-full w-full flex-col overflow-hidden rounded-md [&_[cmdk-group-heading]]:text-muted-foreground **:data-[slot=command-input-wrapper]:h-12 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:font-medium [&_[cmdk-group]]:px-2 [&_[cmdk-group]:not([hidden])_~[cmdk-group]]:pt-0 [&_[cmdk-input-wrapper]_svg]:h-5 [&_[cmdk-input-wrapper]_svg]:w-5 [&_[cmdk-input]]:h-12 [&_[cmdk-item]]:px-2 [&_[cmdk-item]]:py-3 [&_[cmdk-item]_svg]:h-5 [&_[cmdk-item]_svg]:w-5"
        data-slot="command"
        data-testid="cmdk-command"
      >
        <div>
          Dialog content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandEmpty component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="py-6 text-center text-sm"
    data-slot="command-empty"
    data-testid="cmdk-empty"
  >
    No results found.
  </div>
</DocumentFragment>
`;

exports[`CommandGroup component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="text-foreground [&_[cmdk-group-heading]]:text-muted-foreground overflow-hidden p-1 [&_[cmdk-group-heading]]:px-2 [&_[cmdk-group-heading]]:py-1.5 [&_[cmdk-group-heading]]:text-xs [&_[cmdk-group-heading]]:font-medium"
    data-slot="command-group"
    data-testid="cmdk-group"
  >
    <div>
      Group content
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandInput component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex h-9 items-center gap-2 border-b px-3"
    data-slot="command-input-wrapper"
  >
    <svg
      class="size-4 shrink-0 opacity-50"
      data-testid="search-icon"
    >
      <path />
    </svg>
    <input
      class="placeholder:text-muted-foreground flex h-10 w-full rounded-md bg-transparent py-3 text-sm outline-hidden disabled:cursor-not-allowed disabled:opacity-50"
      data-slot="command-input"
      data-testid="cmdk-input"
      placeholder="Search..."
    />
  </div>
</DocumentFragment>
`;

exports[`CommandItem component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="data-[selected=true]:bg-accent data-[selected=true]:text-accent-foreground [&_svg:not([class*='text-'])]:text-muted-foreground relative flex cursor-default items-center gap-2 rounded-sm px-2 py-1.5 text-sm outline-hidden select-none data-[disabled=true]:pointer-events-none data-[disabled=true]:opacity-50 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4"
    data-slot="command-item"
    data-testid="cmdk-item"
    role="option"
  >
    Item content
  </div>
</DocumentFragment>
`;

exports[`CommandList component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="max-h-[300px] scroll-py-1 overflow-x-hidden overflow-y-auto"
    data-slot="command-list"
    data-testid="cmdk-list"
  >
    <div>
      List content
    </div>
  </div>
</DocumentFragment>
`;

exports[`CommandSeparator component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-border -mx-1 h-px"
    data-slot="command-separator"
    data-testid="cmdk-separator"
  />
</DocumentFragment>
`;

exports[`CommandShortcut component CommandShortcut component Rendering matches the snapshot 1`] = `
<DocumentFragment>
  <span
    class="text-muted-foreground ml-auto text-xs tracking-widest"
    data-slot="command-shortcut"
  >
    ⌘K
  </span>
</DocumentFragment>
`;
